@@ -1,3 +1,9 @@
+2006-08-22  Marzo Sette Torres Junior <marzojr@yahoo.com>
+	* actions.cc: Testing adding a limit to the number of steps between each
+	  check in Approach_actor_action (makes for smarter archers and monsters).
+	* effects.cc: Removed some duplicate increments in height for projectiles
+	  and slightly tweaked the start and end positions for them.
+
 2006-08-21  Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* Makefile.common: Force recreation of ucparse.{cc,h} or uclex.cc if,
 	  respectively, ucparse.yy or uclex.yy are changed. Need to know if
